--- a/Develop/index.html
+++ b/Develop/index.html
@@ -1,38 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <script type="text/javascript" src="https://cdn.addevent.com/libs/atc/1.6.1/atc.min.js" async defer></script>
     <title>Work Day Scheduler</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar to shedule your busy life as well as organize your appointments!</p>
+        <p id="currentDay" class="lead"></p>
+
+        <div title="Add to Calendar" class="addeventatc">
+            Add to Calendar
+            <span class="start">04-07-2022 08:00</span>
+            <span class="end">04-07-2022 10:00</span>
+            <span class="timezone">America/Los_Angeles</span>
+            <span class="title">Summary of the event</span>
+            <span class="description">Description of the event</span>
+            <span class="location">Location of the event</span>
+        </div>
+        
     </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
+    <div id="time-blocks" class="container">
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            9AM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            10AM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            11AM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            12PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            1PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            2PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            3PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            4PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
+    </div>
+
+    <div id="hour9" class="row time-block">
+        <div class="col-md-1 hour">
+            5PM
+        </div>
+        <textarea class="col-md-10 description" placeholder="Add Schedule Here"></textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save" title="Save Event"></i></button>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
+</body>
+
 </html>
